[metadata]
name = jun_airflow_utils
version = 0.1.0
author = Jun Sung Son
author_email = junsungs950@gmail.com
description = short_description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://json9101.github.io/jun_airflow_utils
project_urls =
    Bug Tracker = https://github.com/json9101/jun_airflow_utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
license = GNU General Public License (GPL)
platform = macOS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    jun_airflow_utils-ping = jun_airflow_utils:ping
    jun_airflow_utils-hello = jun_airflow_utils:hello
    jun_airflow_util-bash = jun_airflow_utils:gen_bash_task
